# VulkanExploration

./: README.md
1_compatibility_test/: CMakeLists.txt  debug.ps1
1_compatibility_test/source/: main.cpp
2_window_instances_and_devices/: CMakeLists.txt  clean.ps1  run.ps1
2_window_instances_and_devices/source/: VkRenderer.cpp  VkRenderer.hpp  utilities.hpp
3_surfaces/: build.ps1  run.ps1
3_surfaces/.cache/clangd/index/: VkRenderer.cpp.EB9E01D5F3404298.idx  VkRenderer.hpp.5842B45672326EEE.idx  context.c.BA7967192D862F79.idx  egl_context.c.96A9F44D79C2B939.idx  glfw3.h.4D0B112859EF836B.idx  glfw3native.h.BED77AD90193F10C.idx  init.c.31E6FF76F356A1D5.idx  input.c.BB0D3F9FCA9573A5.idx  internal.h.FF8D44510EFCA494.idx  main.cpp.F2CD7E8B43694348.idx  mappings.h.D8D28EBDA75B5994.idx  monitor.c.D0CB9CBD4C785989.idx  null_init.c.BADA6F7F27956ED4.idx  null_joystick.c.5C0766B9BAE7761D.idx  null_joystick.h.3C5038AFE45D148D.idx  null_monitor.c.4D6C3CB3FEC7B41F.idx  null_platform.h.87F545561CCC5E79.idx  null_window.c.78171C6CDC17CA20.idx  osmesa_context.c.74FF9912C2EE83BF.idx  platform.c.94B150BC918AED72.idx  platform.h.F26B57B972F613F2.idx  utilities.hpp.A7B07B9A85AD19A3.idx  vulkan.c.48B311017CE1D3F5.idx  (+13 more)
3_surfaces/source/: VkRenderer.cpp  VkRenderer.hpp  main.cpp  utilities.hpp
4_pipeline/: CMakeLists.txt  debug.ps1
4_pipeline/shaders/: shader.frag
4_pipeline/source/: VkRenderer.cpp  VkRenderer.hpp  utilities.hpp
5_framebuffer/: clean.ps1  shader_compile.ps1
5_framebuffer/shaders/: shader.vert
5_framebuffer/source/: VkRenderer.cpp  VkRenderer.hpp  main.cpp  utilities.hpp
