CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

PROJECT(VulkanProbe)

ADD_EXECUTABLE(VulkanProbe
    "source/main.cpp"

    "source/utilities.hpp"
    "source/VkRenderer.hpp"
    "source/VkRenderer.cpp"
)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}../bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}../bin)
SET(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

IF (WIN32)
    SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY
        VS_STARTUP_PROJECT VulkanProbe) 
ENDIF (WIN32)

ADD_SUBDIRECTORY("vendor/glfw")
FIND_PACKAGE(Vulkan REQUIRED)

TARGET_INCLUDE_DIRECTORIES(VulkanProbe PUBLIC 
    ${Vulkan_INCLUDE_DIRS}
    "source"
)

TARGET_LINK_LIBRARIES(VulkanProbe
    ${Vulkan_LIBRARIES}
    glfw
)
